force-app/main/default/objects/Apttus_Billing__PaymentMethod__c/Apttus_Billing__PaymentMethod__c.object-meta.xml
<CustomObject>
    <description>Stores the information needed to process a payment.</description>
    <label>Payment Method</label>
    <nameField>
        <displayFormat>PM-{00000000}</displayFormat>
        <label>Payment Method Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>