force-app/main/default/objects/Apttus_Billing__PaymentMethod__c/fields/Apttus_Billing__CardNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__CardNumber__c</fullName>
    <description>The masked card number.</description>
    <inlineHelpText>The masked card number.</inlineHelpText>
    <label>Card Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>