force-app/main/default/objects/Apttus_Billing__PaymentMethod__c/fields/Apttus_Billing__ECheckAccountType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ECheckAccountType__c</fullName>
    <description>eCheck account type.</description>
    <inlineHelpText>eCheck account type.</inlineHelpText>
    <label>ECheck Account Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>