force-app/main/default/objects/Apttus_Billing__PaymentMethod__c/fields/Apttus_Billing__ECheckRoutingNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ECheckRoutingNumber__c</fullName>
    <description>Masked eCheck routing number.</description>
    <inlineHelpText>Masked eCheck routing number.</inlineHelpText>
    <label>ECheck Routing Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>