force-app/main/default/objects/Apttus_Billing__PaymentMethod__c/fields/Apttus_Billing__IsDefault__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, use this as the default payment method for the account.</description>
    <inlineHelpText>If checked, use this as the default payment method for the account.</inlineHelpText>
    <label>IsDefault</label>
    <type>Checkbox</type>
</CustomField>