force-app/main/default/objects/Apttus_Billing__PaymentMethod__c/fields/Apttus_Billing__PaymentMethodType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__PaymentMethodType__c</fullName>
    <description>The transaction type of the payment method.</description>
    <inlineHelpText>The transaction type of the payment method.</inlineHelpText>
    <label>Payment Method Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>eCheck</fullName>
            </value>
            <value>
                <fullName>Visa Checkout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>