force-app/main/default/objects/Apttus_Billing__PaymentMethod__c/fields/Apttus_Billing__ProfileId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ProfileId__c</fullName>
    <description>Assigned by gateway. Used to identify customer profile.</description>
    <inlineHelpText>Assigned by gateway. Used to identify customer profile.</inlineHelpText>
    <label>Profile Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>