force-app/main/default/objects/Apttus_Billing__PaymentMethod__c/fields/Apttus_Billing__Status__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Status__c</fullName>
    <description>Shows the current status of the Payment Method.</description>
    <inlineHelpText>Shows the current status of the Payment Method.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <default>true</default>
                <label>Inactive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>