force-app/main/default/objects/Apttus_Billing__PaymentMethod__c/fields/Apttus_Billing__TokenId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TokenId__c</fullName>
    <description>Token for the payment method. Assigned by the Gateway.</description>
    <inlineHelpText>Token for the payment method. Assigned by the Gateway.</inlineHelpText>
    <label>Token Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>